@@ -13,3 +13,4 @@ README updates.
 Removed Methods module and submodules - methods moved into InstanceController directly.
 Fixed parameters for alias methods on InstanceController.
 Changed inheritance for extends to behave like module inheritance. Now extending an instance with a CCM-enabled module will cause instance methods to be appended to extended instances eigenclass chain; singleton methods will not cascade for extend.
+Fixed Class instance configuration lookups.
